--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         karachi
     </h5>
     <p>one of the biggiest city in world</p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, in.
 </body>
 </html>
